booking js update 2